--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -1,10 +1,9 @@
 
-
-<div class='jumbotron text-center'>
-	<h1>Welcome to mean-starter</h1>
-
-	<p>Start building! <b>find me in public/templates/main.html)</b></p>
-
-	<div class='btn btn-success'>{{button}}</div>
-
+<div class='row'>
+	<div ng-repeat='todo in todos'>
+		<h3>{{todo.title}}</h3>
+		<p>{{todo.description}}</p>
+		<div class='btn btn-primary'>Edit</div>
+		<div class='btn btn-danger'>Delete</div>
+	</div>
 </div>
